osd/ReplicatedBackend: adjust sub_op_modify assert

If we're a backfill target, we may be missing an object
we get an empty opt for (something past our
last_backfill line).  This is fine.

Fixes: http://tracker.ceph.com/issues/19191
Signed-off-by: Sage Weil <sage@redhat.com>