src/osd/ReplicatedBackend.cc
@@ -1106,7 +1106,7 @@ void ReplicatedBackend::sub_op_modify(OpRequestRef op)
   assert(m->map_epoch >= get_info().history.same_interval_since);
 
   // we better not be missing this.
-  assert(!parent->get_log().get_missing().is_missing(soid));
+  assert(rm->opt.empty() || !parent->get_log().get_missing().is_missing(soid));
 
   int ackerosd = m->get_source().num();
 
